--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   flex: 0.5;
   margin: 10px;
   position: relative;
-  transition: flex 0.7s ease-in;
+  transition: flex 0.7s ease-in; /*Smooth widening of panel when it becomes active*/
   text-align: center;
 }
 
@@ -38,7 +38,6 @@ body {
   font-size: 24px;
   position: absolute;
   bottom: 20px;
-  left: 40%;
   margin: 0;
   opacity: 0;
 }
@@ -57,6 +56,7 @@ body {
     width: 100vw;
   }
 
+  /* Hide 4th and 5th panels on small screens */
   .panel:nth-of-type(4),
   .panel:nth-of-type(5) {
     display: none;
